Add instructions to the page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <body>
     <main>
         <h1>Welcome to my PONG GAME!!!</h1>
+        <p>Commands:</p>
+        <ul>
+          <li>Player 1: Use W and S to move the left paddle.</li>
+          <li>Player 2: Use up and down arrows to move the right paddle.</li>
+        </ul>
     </main>
   </body>
 </html>
