Update canvas positioning

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
           <li>Player 1: Use W and S to move the left paddle.</li>
           <li>Player 2: Use up and down arrows to move the right paddle.</li>
         </ul>
+
+        <div id="canvas">
+
+        </div>
     </main>
   </body>
 </html>
